--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "element-ui": "^2.15.6",
+    "form-making": "^1.2.10",
+    "vform-builds": "^2.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
